# omgui

./: ._foo.csv  .gitignore  .pylintrc  Dockerfile  Dockerfile-1  MANIFEST.in  README-molecules.md  README.md  README2.md  Untitled.ipynb  demo.ipynb  dump.rdb  main.py  omg.config.yml  omgui.config.yml  pyproject.toml  requirements.txt
app/: main.py
app/routers/: charts.py  molecules.py
app/static/: animations.css  demo.css  main.js
app/templates/: chart-v1.jinja  chart.jinja  demo-charts-v1.html  demo-charts.html  demo-molecules.html
app/workers/: chart_sampler.py  svgmol_2d.py  util.py
docs/: about.md  chartviz.md  config.md  functionality.md  gui.md  installation.md  molviz.md  readme-v1.md  readme.md  troubleshoot.md
docs/assets/: animtest.mov
fx/: __init__.py  fx.py
gui/: gui_launcher.py  gui_routes.py
gui/api/: dataframe_api.py  file_system_api.py  general_api.py  molecules_api.py
gui/helpers/: __init__.py  general.py  gui_install.py  jl_settings.py  json_decimal_encoder.py  logger.py
gui/workers/: file_system.py  smol_functions.py  smol_transformers.py
omgui/: Untitled.ipynb  Untitled1.ipynb  __init__.py  cmd_pointer.py  config.py  configuration.py  context-v1.py  context.py  entrypoint.py  gui_launcher.py  gui_routes.py  main.py  proxy_server.py  startup.py
omgui.egg-info/: PKG-INFO  SOURCES.txt
omgui/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
omgui/api/: dataframe_api.py  file_system_api.py  general_api.py  molecules_api.py  result_api.py
omgui/chartviz/: __init__.py  chartviz_routes.py  defaults.py  prep.py  render.py  screenshot_UNUSED.py  types.py
omgui/chartviz/templates/: chart.jinja  (+1 more)
omgui/dev/: proxy_server.py  tar_samples.py
omgui/gui/: --gui-demo.ipynb  gui_routes.py
omgui/gui_services/: dataframes.py  file_system.py  general.py  molecules.py  results.py  srv_dataframe.py  srv_file_system.py  srv_general.py  srv_molecules.py  srv_result.py
omgui/helpers/: development.py  exception_handlers.py  general.py  gui_install.py  jupyter.py  logger.py  mol_utils.py  molecules.py  paths.py
omgui/molviz/: __init__.py  molviz_routes.py  svgmol_2d.py  svgmol_3d.py
omgui/mws/: __init__.py  mws_add_prop.py
omgui/spf/: README.md  spf.py
omgui/static/: viz-demos.css
omgui/util/: api_router--TRASH.py  exception_handlers.py  fastapi_middleware.py  general.py  gui_install.py  logger.py  paths.py  spinner.py
omgui/workers/: file_system.py  mmol_functions.py  mmol_transformers.py  smol_functions.py  smol_transformers.py
reference-charts/: chartjs-basic-bar.html  chartjs-ticker-line.html  plotlyjs-ticker-line.html
render/: __init__.py  render_molecule_svg_2d.py  render_molecule_svg_3d.py  screenshot.py
sample-charts/: plotlyjs-ticker-candlestick.html
sample-data-1/: example-line-chart.json  pie-1.json  q1-random.json  scatter-plot-1.json  stock-tickers-2.json  stock-tickers-3.json  stock-tickers-4.json  stock-tickers.json
static/: demo.css  main.css
templates/: chart.jinja  demo-charts.html  demo-molecules.html  demo.html
tests/: chartviz-testing.ipynb
viz_tools/: render_molecule_svg_3d.py
workers/: sampler.py  screenshot.py  svgmol_2d.py  svgmol_3d.py
(+346 files in other folders)
