[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omgui"
version = "0.0.1"
authors = [
  { name="Moenen Erbuer / IBM Research", email="moenen.erbuer@ibm.com" },
]
description = "OMGUI is a library to visualize small molecules, macromolecules and various types of data on the fly."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/acceleratedscience/omgui"
"Bug Tracker" = "https://github.com/acceleratedscience/omgui/issues"