[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = { find = {} } # Automatically find all packages in the project
include-package-data = true # Include non-code files specified in MANIFEST.in

[tool.setuptools.package-data]
omgui = ["data/samples.tar.gz"]

[project]
name = "omgui"
version = "0.0.1"
authors = [
  { name="Moenen Erbuer / IBM Research", email="moenen.erbuer@ibm.com" },
]
description = "OMGUI is a library to visualize small molecules, macromolecules and various types of data on the fly."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiofiles>=22.1.0",
  "CairoSVG>=2.8.2",
  "cinemol>=1.0.2",
  "fastapi>=0.115.7",
  "gemmi>=0.6.7",
  "halo>=0.0.31",
  "IPython>=9.5.0",
  "Jinja2>=3.1.6",
  "kaleido>=1.0.0",
  "pandas>=2.3.2",
  "plotly>=6.3.0",
  "pydantic>=2.11.9",
  "PyYAML>=6.0.2",
  "pubchempy>=1.0.5",
  "requests>=2.32.4",
  "rdkit>=2024.9.6",
  "redis>=6.2.0",
  "tabulate>=0.9.0",
  "uvicorn>=0.34.2",
]

[project.urls]
Homepage = "https://github.com/acceleratedscience/omgui"
"Bug Tracker" = "https://github.com/acceleratedscience/omgui/issues"

# pip install omgui[dev]
[project.optional-dependencies]
dev = []